--- a/index.html
+++ b/index.html
@@ -183,33 +183,146 @@
         /* About Section */
         .about {
             background: #F5F7FA;
+            position: relative;
+            overflow: hidden;
         }
 
-        .about-content {
-            max-width: 900px;
+        .about-wrapper {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 4rem;
+            align-items: center;
+            max-width: 1200px;
             margin: 0 auto;
-            text-align: center;
         }
 
-        .about-content p {
+        .about-content-left {
+            position: relative;
+        }
+
+        .about-main-title {
+            font-size: clamp(2.5rem, 6vw, 4rem);
+            font-weight: 700;
+            color: #1B2A41;
+            line-height: 1.1;
+            margin-bottom: 2rem;
+        }
+
+        .highlight-underline {
+            position: relative;
+            display: inline-block;
+        }
+
+        .highlight-underline::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 12px;
+            background: linear-gradient(135deg, #2F80ED 0%, #9B51E0 100%);
+            z-index: -1;
+        }
+
+        .social-icons {
+            display: flex;
+            gap: 1rem;
+            margin-bottom: 2rem;
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
+
+        .social-icon {
+            width: 45px;
+            height: 45px;
+            border: 2px solid #1B2A41;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #1B2A41;
+            transition: all 0.3s ease;
+            text-decoration: none;
+        }
+
+        .social-icon:hover {
+            background: linear-gradient(135deg, #2F80ED 0%, #9B51E0 100%);
+            border-color: transparent;
+            color: #FFFFFF;
+            transform: translateY(-3px);
+        }
+
+        .about-description {
             font-size: 1.1rem;
             line-height: 1.8;
             color: #000000;
-            margin-bottom: 1.5rem;
+            margin-top: 1rem;
         }
 
-        .about-highlight {
-            background: linear-gradient(135deg, #2F80ED 0%, #9B51E0 100%);
-            color: #FFFFFF;
-            padding: 2rem;
-            border-radius: 15px;
-            margin-top: 2rem;
+        .about-image-right {
+            position: relative;
+            height: 450px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
-        .about-highlight h3 {
-            font-size: 1.5rem;
-            margin-bottom: 1rem;
+        .image-decoration {
+            position: absolute;
+            width: 400px;
+            height: 400px;
+            background: linear-gradient(135deg, #FFC837 0%, #FF8008 100%);
+            border-radius: 50%;
+            top: 50%;
+            right: -50px;
+            transform: translateY(-50%);
+            z-index: 1;
         }
+
+        .image-decoration::before {
+            content: '';
+            position: absolute;
+            width: 300px;
+            height: 300px;
+            background: rgba(255, 200, 55, 0.3);
+            border-radius: 50%;
+            top: -80px;
+            right: 100px;
+        }
+
+        .image-container {
+            position: relative;
+            width: 380px;
+            height: 380px;
+            border-radius: 50%;
+            overflow: hidden;
+            border: 10px dashed #1B2A41;
+            z-index: 2;
+            background: #FFFFFF;
+        }
+
+        .image-container img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .image-container::before {
+            content: '👔';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 6rem;
+            opacity: 0.2;
+            z-index: 1;
+        }
+
+        .image-container img:not([src=""]) ~ ::before {
+            display: none;
+        }
+
 
         /* Categories */
         .categories {
@@ -336,7 +449,6 @@
 
         /* Placeholder cuando no hay imagen */
         .product-image::before {
-            content: '📦';
             font-size: 3rem;
             opacity: 0.3;
             position: absolute;
@@ -534,17 +646,186 @@
         }
 
         /* Responsive */
+        @media (max-width: 968px) {
+            .about-wrapper {
+                grid-template-columns: 1fr;
+                gap: 3rem;
+            }
+
+            .about-content-left {
+                text-align: center;
+            }
+
+            .social-icons {
+                position: static;
+                justify-content: center;
+                margin-bottom: 2rem;
+            }
+
+            .about-main-title {
+                text-align: center;
+            }
+
+            .about-description {
+                text-align: left;
+            }
+        }
+
         @media (max-width: 768px) {
+            .nav-menu {
+                position: fixed;
+                left: -100%;
+                top: 70px;
+                flex-direction: column;
+                background: rgba(27, 42, 65, 0.98);
+                width: 100%;
+                padding: 2rem;
+                gap: 1.5rem;
+                transition: left 0.3s ease;
+                box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+            }
+
+            .nav-menu.active {
+                left: 0;
+            }
+
+            .menu-toggle {
+                display: block;
+            }
+
+            .nav-logo {
+                font-size: 1.2rem;
+            }
+
             section {
                 padding: 3rem 0;
             }
 
             .categories-grid {
-                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+                grid-template-columns: 1fr;
+                gap: 1rem;
             }
 
             .products-grid {
                 grid-template-columns: 1fr;
+            }
+
+            .about-wrapper {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+            }
+
+            .about-main-title {
+                font-size: 2.5rem;
+                text-align: center;
+            }
+
+            .social-icons {
+                position: static;
+                justify-content: center;
+                margin-top: 1rem;
+                margin-bottom: 1.5rem;
+            }
+
+            .about-description {
+                text-align: center;
+                font-size: 1rem;
+            }
+
+            .about-image-right {
+                height: 300px;
+                margin: 0 auto;
+            }
+
+            .image-decoration {
+                width: 250px;
+                height: 250px;
+                right: 0;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+
+            .image-container {
+                width: 240px;
+                height: 240px;
+                border-width: 6px;
+            }
+
+            .image-decoration::before {
+                width: 150px;
+                height: 150px;
+                top: -50px;
+                right: 50px;
+            }
+
+            .hero {
+                margin-top: 60px;
+                min-height: 80vh;
+                padding: 1.5rem;
+            }
+
+            .hero h1 {
+                font-size: 2rem;
+            }
+
+            .hero p {
+                font-size: 1rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .nav-container {
+                padding: 0 1rem;
+            }
+
+            .nav-logo {
+                font-size: 1rem;
+            }
+
+            .cta-button {
+                padding: 0.875rem 1.75rem;
+                font-size: 1rem;
+            }
+
+            .section-title {
+                font-size: 1.75rem;
+            }
+
+            .about-main-title {
+                font-size: 2rem;
+            }
+
+            .social-icon {
+                width: 40px;
+                height: 40px;
+            }
+
+            .about-image-right {
+                height: 280px;
+            }
+
+            .image-decoration {
+                width: 220px;
+                height: 220px;
+            }
+
+            .image-container {
+                width: 220px;
+                height: 220px;
+                border-width: 5px;
+            }
+
+            .category-card {
+                padding: 1.5rem;
+            }
+
+            .product-image {
+                height: 180px;
+            }
+
+            .whatsapp-button {
+                padding: 1rem 2rem;
+                font-size: 1rem;
             }
         }
     </style>
@@ -577,22 +858,35 @@
                 WhatsApp</a>
         </div>
     </section>
-    <!-- About Section -->
+
+<!-- About Section -->
     <section class="about" id="sobre-nosotros">
         <div class="container">
-            <div>
-            <h2 class="section-title">Sobre Fresst</h2>
-
-            <div class="about-content">
-                <p>Somos <strong>Fresst</strong>, líderes en equipamiento profesional para negocios gastronómicos y
-                    comerciales. Con años de experiencia en el mercado, nos especializamos en proporcionar soluciones
-                    completas de refrigeración, cocción, mobiliario y equipos especiales.</p>
-                <p>Nuestro compromiso es ofrecer productos de la más alta calidad, respaldados por un servicio de
-                    atención personalizada que garantiza la mejor experiencia para nuestros clientes.</p>
-                <div class="about-highlight">
-                    <h3>Nuestra Misión</h3>
-                    <p>Equipar tu negocio con tecnología de vanguardia, brindando soluciones eficientes que impulsen el
-                        crecimiento y éxito de tu empresa.</p>
+            <div class="about-wrapper">
+                <div class="about-content-left">
+                    <h2 class="about-main-title"><b>Sobre</b><br><span class="highlight-underline"><b>Nosotros</b></span></h2>
+                    <div class="social-icons">
+                        <a href="https://www.instagram.com/novamind_automation/" class="social-icon" aria-label="Instagram" title="Instagram">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                                <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                            </svg>
+                        </a>
+                        <a href="https://www.tiktok.com/@novamind_automation?_r=1&_t=ZM-92Fj7doz3cq" class="social-icon" aria-label="TikTok" title="TikTok">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.84 6.84 0 0 0-1-.05A6.33 6.33 0 0 0 5 20.1a6.34 6.34 0 0 0 10.86-4.43v-7a8.16 8.16 0 0 0 4.77 1.52v-3.4a4.85 4.85 0 0 1-1-.1z"/>
+                            </svg>
+                        </a>
+                    </div>
+                    <p class="about-description">Somos Fresst, líderes en equipamiento profesional para negocios gastronómicos y comerciales. Con años de experiencia en el mercado, nos especializamos en proporcionar soluciones completas de refrigeración, cocción, mobiliario y equipos especiales.</p>
+                </div>
+                <div class="about-image-right">
+                    <!-- INSTRUCCIÓN: Coloca aquí la URL de tu imagen del negocio -->
+                    <div class="image-decoration"></div>
+                    <div class="image-container">
+                        <img src="images/negocio.jpeg" alt="Sobre Fress" onerror="this.style.display='none'">
+                    </div>
                 </div>
             </div>
         </div>
